<resources>
    <string name="app_name">Registration page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_title">Sign up</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="password_hint">Password</string>
    <string name="switch_hint">Are you over 18 years old*</string>
    <string name="sign_up_button_text">Continue</string>
    <string name="parent_fragment_title">You\'re under 18</string>
    <string name="parent_name_input_hint">Parent\'s name</string>
    <string name="success_fragment_title">Welcome</string>
    <string name="success_fragment_subtitle">Personal information</string>
    <string name="name_surname">Name/Surname</string>
    <string name="name_surname_placeholder">Name Surname</string>
    <string name="parent_name">Parent\'s name</string>
    <string name="empty_field_error">The field must be filled</string>
    <string name="unreliable_password_error">Password must be 8+ chars, with upper and lower case letters and digits</string>
    <string name="invalid_name_error">Name and surname fields should contain only alphabetical characters</string>
</resources>