...
            android:layout_height="wrap_content"
            android:text="@string/name_surname"
            android:layout_marginStart="@dimen/screen_edges_margin"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/name_surname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_surname_placeholder"
            android:layout_marginEnd="@dimen/screen_edges_margin"
            android:layout_gravity="end" />
    </androidx.cardview.widget.CardView>
...
            android:layout_height="wrap_content"
            android:text="@string/parent_name"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/screen_edges_margin"/>

        <TextView
            android:id="@+id/parent_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent_name"
            android:layout_marginEnd="@dimen/screen_edges_margin"
            android:layout_gravity="end"/>
    </androidx.cardview.widget.CardView>
...
